--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ button:hover {
 <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
 
 <input type=hidden name="oid" value="00D8X000000FmkB">
-<input type=hidden name="retURL" value="http://">
+<input type=hidden name="retURL" value="http://burcuderdiyok.github.io/FollowUpPage/">
 
 <!--  ----------------------------------------------------------------------  -->
 <!--  NOTE: These fields are optional debugging elements. Please uncomment    -->
